--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,9 @@ serde_yaml = "0.9"
 thiserror = "1.0"
 
 [dependencies.confik_derive]
+version = "0.1"
 path = "confik_derive"
+
+[workspace]
+members = ["confik_derive"]
+resolver = "3"
