--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,13 @@
 name = "konfik"
 version = "0.1.0"
 edition = "2024"
+description = "config parser"
+license-file = "LICENSE"
+license = "MIT"
+repository = "https://github.com/kingananas20/konfik"
+readme = "README.md"
+keywords = ["config"]
+categories = ["configuration"]
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
@@ -14,6 +21,33 @@ thiserror = "1.0"
 version = "0.1"
 path = "konfik_derive"
 
+[lints]
+workspace = true
+
 [workspace]
 members = ["konfik_derive"]
 resolver = "3"
+
+[workspace.lints.rust]
+unsafe_code = "deny"
+missing_docs = "deny"
+missing_debug_implementations = "deny"
+unused_must_use = "deny"
+unreachable_patterns = "warn"
+
+[workspace.lints.clippy]
+unwrap_used = { level = "deny", priority = 1 }
+expect_used = { level = "deny", priority = 1 }
+allow_attributes = { level = "deny", priority = 1 }
+correctness = "deny"
+nursery = "deny"
+suspicious = "deny"
+complexity = "deny"
+style = "deny"
+needless_pass_by_value = { level = "allow", priority = 1 }
+perf = "deny"
+cargo = "deny"
+pedantic = "warn"
+dbg_macro = { level = "warn", priority = 1 }
+todo = { level = "warn", priority = 1 }
+unimplemented = { level = "warn", priority = 1 }
