--- a/konfik_derive/Cargo.toml
+++ b/konfik_derive/Cargo.toml
@@ -6,8 +6,8 @@ description = "Derive macro for konfik configuration parser"
 license-file = "LICENSE"
 repository = "https://github.com/kingananas20/konfik"
 readme = "README.md"
-keywords = ["config"]
-categories = ["configuration"]
+keywords = ["config", "derive", "proc-macro"]
+categories = ["config"]
 
 include = ["src/**", "Cargo.toml", "LICENSE", "README.md"]
 
