--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ description = "config parser"
 license-file = "LICENSE"
 repository = "https://github.com/kingananas20/konfik"
 readme = "README.md"
-keywords = ["config"]
+keywords = ["configuration", "cli", "validation", "file", "environment"]
 categories = ["config"]
 
 include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]
