changed the repo url

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.2"
 edition = "2024"
 description = "config parser"
 license-file = "LICENSE"
-repository = "https://github.com/kingananas20/konfik"
+repository = "https://github.com/Crypts-of-the-lost/konfik"
 readme = "README.md"
 keywords = ["configuration", "cli", "validation", "file", "environment"]
 categories = ["config"]
