--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ serde_json = "1.0"
 toml = "0.8"
 serde_yaml = "0.9"
 thiserror = "1.0"
+clap = { version = "4.5.45", features = ["derive", "string"] }
 
 [dependencies.konfik_derive]
 version = "0.1"
