--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ serde_json = "1.0"
 toml = "0.8"
 serde_yaml = "0.9"
 thiserror = "1.0"
-clap = { version = "4.5.45", features = ["derive", "string"] }
+clap.workspace = true
 
 [dependencies.konfik_derive]
 version = "0.1"
@@ -29,6 +29,9 @@ workspace = true
 # ---------
 # Workspace
 # ---------
+[workspace.dependencies]
+clap = { version = "4.5.45", features = ["derive", "string"] }
+
 [workspace]
 members = ["konfik_derive"]
 resolver = "3"
