--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,8 @@ categories = ["config"]
 include = ["src/**", "Cargo.toml", "README.md", "LICENSE", "banner.svg"]
 
 [dependencies]
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+serde.workspace = true
+serde_json.workspace = true
 toml = "0.8"
 serde_yaml = "0.9"
 thiserror = "1.0"
@@ -26,11 +26,11 @@ path = "konfik_derive"
 [lints]
 workspace = true
 
-# ---------
 # Workspace
-# ---------
 [workspace.dependencies]
 clap = { version = "4.5.45", features = ["derive", "string"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [workspace]
 members = ["konfik_derive"]
