update repo url

--- a/konfik_derive/Cargo.toml
+++ b/konfik_derive/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 description = "Derive macro for konfik configuration parser"
 license-file = "LICENSE"
-repository = "https://github.com/kingananas20/konfik"
+repository = "https://app.radicle.xyz/nodes/iris.radicle.xyz/rad:z2FpyXb6X6ENg3MvQPkMfqVN7LcD8/"
 readme = "README.md"
 keywords = ["config", "derive", "proc-macro"]
 categories = ["config"]
