added better support for impl configMeta without using autoref specialization

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.2"
 edition = "2024"
 description = "config parser"
 license-file = "LICENSE"
-repository = "https://github.com/Crypts-of-the-lost/konfik"
+repository = "https://app.radicle.xyz/nodes/iris.radicle.xyz/rad:z2FpyXb6X6ENg3MvQPkMfqVN7LcD8/"
 readme = "README.md"
 keywords = ["configuration", "cli", "validation", "file", "environment"]
 categories = ["config"]
